# pelles

./: .gitignore  README.md
backend/: debug_scrapers.py  debug_shufersal.html  debug_super_hefer.html  pelles.db  pyproject.toml  requirements.txt  super_hefer_cookies.json
backend/app/: config.py  database.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  product.py
backend/app/schemas/: __init__.py  product.py
backend/app/scrapers/: __init__.py  base.py  shufersal.py  super_hefer.py  super_hefer_auth.py
backend/app/services/: comparison.py  matcher.py  search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ComparisonResults.tsx  ImageModal.tsx  ItemRow.tsx  ProductSelector.tsx  ShoppingListInput.tsx  StoreCard.tsx
frontend/src/hooks/: useComparison.ts
frontend/src/types/: index.ts
